modification de la logique import de children